# nx-sonar

./: .gitignore  README.md
docs/: ros1_ros2_bridge.md
ros1/tools/ros1_gateway/: laser_scan_tcp_sender.py
ros2/docs/: tcp_gateway.md
ros2/src/sonar_adapters/: package.xml  setup.py
ros2/src/sonar_adapters/sonar_adapters/: real_sonar_adapter_node.py  tcp_sonar_receiver_node.py  uuvsim_adapter_node.py
ros2/src/sonar_bringup/: package.xml  setup.py
ros2/src/sonar_bringup/config/: bridge.env.example  pipeline.yaml
ros2/src/sonar_bringup/launch/: pipeline.launch.py
ros2/src/sonar_interfaces/msg/: SonarDetection.msg  SonarFrame.msg
ros2/src/sonar_perception/: package.xml  setup.cfg
ros2/src/sonar_perception/sonar_perception/: yolo_infer_node.py
src/sonar_adapters/: package.xml  setup.cfg  setup.py
src/sonar_adapters/sonar_adapters/: real_sonar_adapter_node.py  uuvsim_adapter_node.py
src/sonar_bringup/: package.xml  setup.cfg  setup.py
src/sonar_bringup/config/: bridge.env.example  pipeline.yaml
src/sonar_bringup/launch/: pipeline.launch.py
src/sonar_interfaces/: CMakeLists.txt  package.xml
src/sonar_interfaces/msg/: SonarDetectionArray.msg
src/sonar_perception/: package.xml  setup.py
src/sonar_perception/sonar_perception/: yolo_infer_node.py
