<?xml version="1.0"?>
<package format="3">
  <name>sonar_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration for the sonar adapter and perception pipeline.</description>
  <maintainer email="dev@example.com">nx-sonar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sonar_adapters</exec_depend>
  <exec_depend>sonar_perception</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
