<?xml version="1.0"?>
<package format="3">
  <name>sonar_adapters</name>
  <version>0.1.0</version>
  <description>将不同声呐数据源统一转换为共享 ROS2 接口的适配器包。</description>
  <maintainer email="dev@example.com">nx-sonar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sonar_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
